<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/convertTo"
        android:textSize="14sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />
    <EditText
        android:id="@+id/cnyAmount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:hint="@string/currencyEditTextHint"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <CheckBox
        android:id="@+id/dollarCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dollar"
        android:layout_marginTop="2dp"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/rubleCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ruble"
        android:layout_marginTop="2dp"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/euroCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/euro"
        android:layout_marginTop="2dp"
        android:textSize="14sp"/>

    <CheckBox
        android:id="@+id/jpyCheckBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/jpy"
        android:layout_marginTop="2dp"
        android:textSize="14sp"/>

    <Button
        android:id="@+id/fragmentLeftButtonCurrencyConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currencyConvert"
        />

    <Button
        android:id="@+id/fragmentLeftButtonClearTextEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clearTextEdit"
        />

    <EditText
        android:id="@+id/fxValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

</LinearLayout>
